--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^4.1.17",
     "ityped": "^1.0.3",
-    "react-icons": "^4.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-intersection-observer": "^8.31.0",
     "react-particles-js": "^3.4.1",
     "react-router-dom": "^5.2.0",
